--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       <h1>E-Bus Pass</h1>
     </div>
     <div class="content">
-      <img src="Screenshot 2024-02-21 214345.png" alt="Screenshot" />
+      <img src="https://i.ibb.co/JnwzQYk/Screenshot-2024-02-21-214345.png" alt="Screenshot" />
     </div>
     <footer>
       <h4>Copyright &copy; Delhi e-Governance Society 2024</h4>
