--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         font-size: 13px;
         line-height: 1.57143;
         color: #322828;
-        background-color: #ffffff;
+        background-color: #b3d7ec;
         margin: 0;
         padding: 0;
       }
@@ -35,8 +35,11 @@
         margin: 0;
       }
       .content {
-        padding-top: 100px;
+
+        padding:98px 10px 10px 10px;
+        
         text-align: center;
+        
       }
       .content img {
         border-radius: 0.2em;
@@ -56,7 +59,10 @@
       <h1>E-Bus Pass</h1>
     </div>
     <div class="content">
-      <img src="https://i.ibb.co/JnwzQYk/Screenshot-2024-02-21-214345.png" alt="Screenshot" />
+      <img
+        src="https://i.ibb.co/JnwzQYk/Screenshot-2024-02-21-214345.png"
+        alt="Screenshot"
+      />
     </div>
     <footer>
       <h4>Copyright &copy; Delhi e-Governance Society 2024</h4>
