--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
     </div>
     <div class="content">
       <img
-        src="https://i.ibb.co/JnwzQYk/Screenshot-2024-02-21-214345.png"
-        alt="Screenshot"
+        src="Screenshot 2024-02-21 214345.png"
+        alt="pass"
       />
     </div>
     <footer>
