--- a/index.html
+++ b/index.html
@@ -43,14 +43,18 @@
       }
       .content img {
         border-radius: 0.2em;
-        max-width: 100%;
+        max-width: 90%;
         height: auto;
       }
       footer {
         background-color: #01a2a6;
-        padding: 40px;
+        padding: 20px;
         color: #fff;
         text-align: center;
+        position: fixed;
+        left: 0;
+        right: 0;
+        bottom: 0;
       }
     </style>
   </head>
@@ -67,5 +71,6 @@
     <footer>
       <h4>Copyright &copy; Delhi e-Governance Society 2024</h4>
     </footer>
-  </body>
+    </body>
+  </html>
 </html>
