--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>DTC</title>
+    <title>Home | e-Bus Pass</title>
     <style>
       body {
         font-family: "Open Sans", Helvetica, Arial, sans-serif;
