--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Home | e-Bus Pass</title>
+    <title>DTC</title>
     <style>
       body {
         font-family: "Open Sans", Helvetica, Arial, sans-serif;
@@ -36,15 +36,15 @@
         margin: 0;
       }
       .content {
-        padding: 100px 10px 10px 10px;
+        padding: 98px 10px 10px 10px;
         display: flex;
         justify-content: center;
         align-items: center;
       }
       .content img {
         border-radius: 0.2em;
-        max-width: 98%;
-        height: 45em;
+        max-width: 100%;
+        height: 50em;
       }
       .image-container {
         max-height: 42em;
@@ -53,9 +53,11 @@
         flex-basis: 40%;
       }
       .gridd {
-        font-size: 18px;
-        padding-left: px;
-        padding-top: 17.555em;
+        font-size: 22px;
+        padding-left: 8em;
+
+        padding-top: 18.25em;
+        padding-bottom: 1em;
       }
       #blinkingText {
         font-size: 25px;
@@ -75,7 +77,7 @@
       }
       footer {
         background-color: #01a2a6;
-        padding: 10px;
+        padding: 19px;
         color: #fff;
         text-align: center;
         position: fixed;
@@ -102,7 +104,9 @@
       </grid>
     </div>
     <footer>
-      <h4>Copyright &copy; Delhi e-Governance Society 2024</h4>
+      <h4 style="color: black; padding: 22px">
+        Copyright &copy; Delhi e-Governance Society 2024
+      </h4>
     </footer>
   </body>
 </html>
