--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
       }
       footer {
         background-color: #01a2a6;
-        padding: 19px;
+        padding: 9px;
         color: #fff;
         text-align: center;
         position: fixed;
@@ -104,7 +104,7 @@
       </grid>
     </div>
     <footer>
-      <h4 style="color: black; padding: 22px">
+      <h4 style="color: black;">
         Copyright &copy; Delhi e-Governance Society 2024
       </h4>
     </footer>
