--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
     <div class="content">
       <div class="image-container">
         <img
-          src="Screenshot 2024-02-21 214345.png"
+          src="sajan.png"
           alt="pass"
           style="position: relative"
         />
