--- a/index.html
+++ b/index.html
@@ -4,69 +4,72 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DTC</title>
+    <link rel="stylesheet" href="style.css" />
     <style>
-      body {
+      /*body*/
+      body,
+      html {
+        margin: 0;
+        padding: 0;
         font-family: "Open Sans", Helvetica, Arial, sans-serif;
         font-size: 13px;
         line-height: 1.57143;
-        color: #322828;
         background-color: #d9eeef;
-        margin: 0;
-        padding: 0;
-        height: max-content;
       }
-      h1 {
-        font-size: 25px;
+
+      .perfect-header {
+        background-color: #ffffff;
+        text-align: center;
+        padding: 20px 0;
+        box-shadow: 0 0px 10px 0 rgba(67, 67, 69, 0.35);
+      }
+
+      .perfect-header nav a {
+        color: #01a2a6;
+        text-decoration: none;
+        margin: 0 15px;
+        font-size: 24px;
+        font-weight: bold;
         font-family: "Merriweather", "Times New Roman", Times, serif;
       }
-      .container {
-        position: fixed;
-        left: 0;
-        right: 0;
-        top: 0;
-        z-index: 16;
-        background: #fff;
-        box-shadow: 0 0px 10px 0 rgba(67, 67, 69, 0.35);
-        padding: 20px;
-      }
-      .container h1 {
-        color: #01a2a6;
-        font-size: 24px;
-        text-align: center;
-        margin: 0;
-      }
+
       .content {
-        padding: 98px 10px 10px 10px;
         display: flex;
         justify-content: center;
         align-items: center;
+        flex-direction: column;
+        height: calc(100vh - 200px); /* Adjust the height as needed */
       }
-      .content img {
-        border-radius: 0.2em;
-        max-width: 100%;
-        height: 43em;
-      }
-      .image-container {
-        max-height: 42em;
-      }
-      img {
-        flex-basis: 40%;
-      }
-      .gridd {
-        font-size: 22px;
-        padding-left: 8em;
 
-        padding-top: 12.55em;
-        padding-bottom: 1.1em;
+      .image-container {
+        margin-top: 5px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex: 1;
       }
+
+      .image-container img {
+        max-width: 100%;
+        max-height: 100%;
+      }
+
+      .gridd {
+        font-size: 16px;
+        padding-left: 0.95em;
+        padding-right: 0.95em;
+        padding-top: 11.4em;
+      }
+
       #blinkingText {
-        font-size: 25px;
+        font-size: 21px;
         font-weight: bold;
         color: #30721c;
         transition: 1.5s;
         opacity: 0;
         animation: opacityAnimation 1.5s infinite alternate;
       }
+
       @keyframes opacityAnimation {
         0% {
           opacity: 0;
@@ -75,38 +78,79 @@
           opacity: 2;
         }
       }
-      footer {
-        background-color: #01a2a6;
-        padding: 1px;
-        color: #fff;
-        text-align: center;
+
+      /*footer*/
+      :root {
+        box-sizing: border-box;
+        margin: 0;
+        padding: 0;
+        font-family: sans-serif;
+      }
+
+      body {
+        height: 100vh;
+        overflow: hidden;
+      }
+
+      .footer {
         position: fixed;
+        bottom: 0;
         left: 0;
         right: 0;
-        bottom: 0;
+        padding-top: 70px;
+        padding-bottom: 30px;
+        background: #01a2a6;
+        color: white;
+        font-weight: 500;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: 0.2rem;
+      }
+
+      /* Updated CSS for image container */
+      .image-container {
+        margin-top: 5px;
+        margin-bottom: 5px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 60vh;
+        width: 100%;
+      }
+
+      .image-container img {
+        max-width: 100%;
+        max-height: 100%;
+      }
+
+      /* Media query for mobile screens */
+      @media (max-width: 767px) {
+        .content {
+          margin-left: 5px;
+          margin-right: 5px;
+        }
       }
     </style>
   </head>
   <body>
-    <div class="container">
-      <h1>E-Bus Pass</h1>
-    </div>
+    <header class="perfect-header">
+      <nav>
+        <a href="#">E-Bus Pass</a>
+      </nav>
+    </header>
     <div class="content">
       <div class="image-container">
-        <img
-          src="sajan.png"
-          alt="pass"
-          style="position: relative"
-        />
+        <img src="sajan.png" alt="pass" style="position: relative" />
       </div>
       <grid class="gridd" style="position: absolute">
         <div id="blinkingText">7504102316894</div>
       </grid>
     </div>
     <footer>
-      <h4 style="color: black;">
-        Copyright &copy; Delhi e-Governance Society 2024
-      </h4>
+      <div class="footer">
+        <span>© Delhi e-Governance Society 2024</span>
+      </div>
     </footer>
   </body>
 </html>
